--- a/www/views/welcome/welcome.html
+++ b/www/views/welcome/welcome.html
@@ -1,6 +1,6 @@
 <ion-view view-title="欢迎页">
   <ion-content scroll="false">
-    <ion-slide-box>
+    <ion-slide-box does-continue="true" auto-play="true" show-pager="false" slide-interval="3000">
       <ion-slide>
         <img class="full-image" src="views/welcome/img/splsh_one.png">
       </ion-slide>
