enable gulp for ionic

--- a/www/views/welcome/welcome.html
+++ b/www/views/welcome/welcome.html
@@ -11,7 +11,7 @@
         <img class="full-image" src="views/welcome/img/splsh_three.png">
       </ion-slide>
     </ion-slide-box>
-    <div class="row padding-left padding-right" style="position: absolute;bottom:10px;">
+    <div class="row padding-left padding-right welcome-button-group">
       <div class="col padding-left padding-right">
         <a class="button button-outline button-energized button-block">登录</a>
       </div>
