--- a/www/views/welcome/welcome.html
+++ b/www/views/welcome/welcome.html
@@ -13,10 +13,10 @@
     </ion-slide-box>
     <div class="row padding-left padding-right welcome-button-group">
       <div class="col padding-left padding-right">
-        <a class="button button-outline button-energized button-block">登录</a>
+        <a class="button button-outline button-energized button-block" ui-sref="login">登录</a>
       </div>
       <div class="col padding-left padding-right">
-        <a class="button button-outline button-energized button-block">注册</a>
+        <a class="button button-energized button-block" ui-sref="register">注册</a>
       </div>
     </div>
   </ion-content>
