--- a/www/views/login/login.html
+++ b/www/views/login/login.html
@@ -21,7 +21,7 @@
     </div>
     <div class="row">
       <div class="col padding-left">
-        <a href="#/forgotpassword" class="button button-clear button-small button-dark">忘记密码？</a>
+        <a ui-sref="forgotpassword" class="button button-clear button-small button-dark">忘记密码？</a>
       </div>
     </div>
     <div class="row">
