--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -3971,14 +3971,14 @@ a.subdued {
     .bar.bar-balanced.bar-footer {
       background-image: linear-gradient(180deg, #28a54c, #28a54c 50%, transparent 50%); }
   .bar.bar-energized {
-    border-color: #f15128;
-    background-color: #f36440;
-    background-image: linear-gradient(0deg, #f15128, #f15128 50%, transparent 50%);
+    border-color: #ff5723;
+    background-color: #ff6a3c;
+    background-image: linear-gradient(0deg, #ff5723, #ff5723 50%, transparent 50%);
     color: #fff; }
     .bar.bar-energized .title {
       color: #fff; }
     .bar.bar-energized.bar-footer {
-      background-image: linear-gradient(180deg, #f15128, #f15128 50%, transparent 50%); }
+      background-image: linear-gradient(180deg, #ff5723, #ff5723 50%, transparent 50%); }
   .bar.bar-royal {
     border-color: #6b46e5;
     background-color: #886aea;
@@ -4217,15 +4217,15 @@ a.subdued {
     background: none; }
 
 .bar-energized .button {
-  border-color: #f15128;
-  background-color: #f36440;
+  border-color: #ff5723;
+  background-color: #ff6a3c;
   color: #fff; }
   .bar-energized .button:hover {
     color: #fff;
     text-decoration: none; }
   .bar-energized .button.active, .bar-energized .button.activated {
-    border-color: #f15128;
-    background-color: #f15128; }
+    border-color: #ff5723;
+    background-color: #ff5723; }
   .bar-energized .button.button-clear {
     border-color: transparent;
     background: none;
@@ -4450,14 +4450,14 @@ a.subdued {
 
 .tabs-energized > .tabs,
 .tabs.tabs-energized {
-  border-color: #f15128;
-  background-color: #F36440;
-  background-image: linear-gradient(0deg, #f15128, #f15128 50%, transparent 50%);
+  border-color: #ff5723;
+  background-color: #ff6a3c;
+  background-image: linear-gradient(0deg, #ff5723, #ff5723 50%, transparent 50%);
   color: #fff; }
   .tabs-energized > .tabs .tab-item .badge,
   .tabs.tabs-energized .tab-item .badge {
     background-color: #fff;
-    color: #F36440; }
+    color: #ff6a3c; }
 
 .tabs-royal > .tabs,
 .tabs.tabs-royal {
@@ -4606,7 +4606,7 @@ a.subdued {
   top: 4%; }
 
 .tabs-striped.tabs-energized .tabs {
-  background-color: #F36440; }
+  background-color: #ff6a3c; }
 
 .tabs-striped.tabs-energized .tab-item {
   color: rgba(255, 255, 255, 0.4);
@@ -4684,7 +4684,7 @@ a.subdued {
   background-image: none; }
 
 .tabs-striped.tabs-background-energized .tabs {
-  background-color: #F36440;
+  background-color: #ff6a3c;
   background-image: none; }
 
 .tabs-striped.tabs-background-royal .tabs {
@@ -4780,14 +4780,14 @@ a.subdued {
       opacity: 1; }
 
 .tabs-striped.tabs-color-energized .tab-item {
-  color: rgba(243, 100, 64, 0.4);
+  color: rgba(255, 106, 60, 0.4);
   opacity: 1; }
   .tabs-striped.tabs-color-energized .tab-item .badge {
     opacity: 0.4; }
   .tabs-striped.tabs-color-energized .tab-item.tab-item-active, .tabs-striped.tabs-color-energized .tab-item.active, .tabs-striped.tabs-color-energized .tab-item.activated {
     margin-top: -2px;
-    color: #F36440;
-    border: 0 solid #F36440;
+    color: #ff6a3c;
+    border: 0 solid #ff6a3c;
     border-top-width: 2px; }
     .tabs-striped.tabs-color-energized .tab-item.tab-item-active .badge, .tabs-striped.tabs-color-energized .tab-item.active .badge, .tabs-striped.tabs-color-energized .tab-item.activated .badge {
       top: 2px;
@@ -4859,9 +4859,9 @@ a.subdued {
 
 .tabs-background-energized .tabs,
 .tabs-background-energized > .tabs {
-  background-color: #F36440;
-  background-image: linear-gradient(0deg, #f15128, #f15128 50%, transparent 50%);
-  border-color: #f15128; }
+  background-color: #ff6a3c;
+  background-image: linear-gradient(0deg, #ff5723, #ff5723 50%, transparent 50%);
+  border-color: #ff5723; }
 
 .tabs-background-royal .tabs,
 .tabs-background-royal > .tabs {
@@ -4942,13 +4942,13 @@ a.subdued {
       opacity: 1; }
 
 .tabs-color-energized .tab-item {
-  color: rgba(243, 100, 64, 0.4);
+  color: rgba(255, 106, 60, 0.4);
   opacity: 1; }
   .tabs-color-energized .tab-item .badge {
     opacity: 0.4; }
   .tabs-color-energized .tab-item.tab-item-active, .tabs-color-energized .tab-item.active, .tabs-color-energized .tab-item.activated {
-    color: #F36440;
-    border: 0 solid #F36440; }
+    color: #ff6a3c;
+    border: 0 solid #ff6a3c; }
     .tabs-color-energized .tab-item.tab-item-active .badge, .tabs-color-energized .tab-item.active .badge, .tabs-color-energized .tab-item.activated .badge {
       opacity: 1; }
 
@@ -5031,11 +5031,11 @@ ion-tabs.tabs-striped.tabs-color-active-balanced .tab-item.tab-item-active, ion-
 ion-tabs.tabs-color-active-energized .tab-item {
   color: #444; }
   ion-tabs.tabs-color-active-energized .tab-item.tab-item-active, ion-tabs.tabs-color-active-energized .tab-item.active, ion-tabs.tabs-color-active-energized .tab-item.activated {
-    color: #F36440; }
+    color: #ff6a3c; }
 
 ion-tabs.tabs-striped.tabs-color-active-energized .tab-item.tab-item-active, ion-tabs.tabs-striped.tabs-color-active-energized .tab-item.active, ion-tabs.tabs-striped.tabs-color-active-energized .tab-item.activated {
-  border-color: #F36440;
-  color: #F36440; }
+  border-color: #ff6a3c;
+  color: #ff6a3c; }
 
 ion-tabs.tabs-color-active-royal .tab-item {
   color: #444; }
@@ -5227,7 +5227,7 @@ ion-tabs.tabs-striped.tabs-color-active-dark .tab-item.tab-item-active, ion-tabs
   .tab-item.tab-item-active.tab-item-energized,
   .tab-item.active.tab-item-energized,
   .tab-item.activated.tab-item-energized {
-    color: #F36440; }
+    color: #ff6a3c; }
   .tab-item.tab-item-active.tab-item-royal,
   .tab-item.active.tab-item-royal,
   .tab-item.activated.tab-item-royal {
@@ -5774,8 +5774,8 @@ ion-tabs.tabs-striped.tabs-color-active-dark .tab-item.tab-item-active, ion-tabs
     background-color: #33cd5f;
     color: #fff; }
   .item.item-energized {
-    border-color: #f15128;
-    background-color: #F36440;
+    border-color: #ff5723;
+    background-color: #ff6a3c;
     color: #fff; }
   .item.item-royal {
     border-color: #6b46e5;
@@ -5910,16 +5910,16 @@ ion-tabs.tabs-striped.tabs-color-active-dark .tab-item.tab-item-active, ion-tabs
   .item-complex.activated .item-content.item-energized,
   .item .item-content.active.item-energized,
   .item .item-content.activated.item-energized {
-    border-color: #f15128;
-    background-color: #f15128; }
+    border-color: #ff5723;
+    background-color: #ff5723; }
     .item.active.item-energized.item-complex > .item-content,
     .item.activated.item-energized.item-complex > .item-content,
     .item-complex.active .item-content.item-energized.item-complex > .item-content,
     .item-complex.activated .item-content.item-energized.item-complex > .item-content,
     .item .item-content.active.item-energized.item-complex > .item-content,
     .item .item-content.activated.item-energized.item-complex > .item-content {
-      border-color: #f15128;
-      background-color: #f15128; }
+      border-color: #ff5723;
+      background-color: #ff5723; }
   .item.active.item-royal,
   .item.activated.item-royal,
   .item-complex.active .item-content.item-royal,
@@ -6105,15 +6105,15 @@ a.item-content {
       background-color: #28a54c; }
 
 .item-complex.item-energized > .item-content {
-  border-color: #f15128;
-  background-color: #F36440;
+  border-color: #ff5723;
+  background-color: #ff6a3c;
   color: #fff; }
   .item-complex.item-energized > .item-content.active, .item-complex.item-energized > .item-content:active {
-    border-color: #f15128;
-    background-color: #f15128; }
+    border-color: #ff5723;
+    background-color: #ff5723; }
     .item-complex.item-energized > .item-content.active.item-complex > .item-content, .item-complex.item-energized > .item-content:active.item-complex > .item-content {
-      border-color: #f15128;
-      background-color: #f15128; }
+      border-color: #ff5723;
+      background-color: #ff5723; }
 
 .item-complex.item-royal > .item-content {
   border-color: #6b46e5;
@@ -6761,7 +6761,7 @@ button.item.item-button-right {
 
 .tabs .tab-item .badge.badge-energized,
 .badge.badge-energized {
-  background-color: #F36440;
+  background-color: #ff6a3c;
   color: #fff; }
 
 .tabs .tab-item .badge.badge-royal,
@@ -7467,8 +7467,8 @@ ion-slides {
     stroke: #ef473a;
     fill: #ef473a; }
   .spinner.spinner-energized {
-    stroke: #F36440;
-    fill: #F36440; }
+    stroke: #ff6a3c;
+    fill: #ff6a3c; }
   .spinner.spinner-royal {
     stroke: #886aea;
     fill: #886aea; }
@@ -7509,7 +7509,7 @@ ion-slides {
   stop-color: #ef473a; }
 
 .spinner-spiral.spinner-energized .stop2 {
-  stop-color: #F36440; }
+  stop-color: #ff6a3c; }
 
 .spinner-spiral.spinner-royal .stop2 {
   stop-color: #886aea; }
@@ -7917,12 +7917,12 @@ input[type="checkbox"][readonly] {
 
 .checkbox-energized input:before,
 .checkbox-energized .checkbox-icon:before {
-  border-color: #F36440; }
+  border-color: #ff6a3c; }
 
 .checkbox-energized input:checked:before,
 .checkbox-energized input:checked + .checkbox-icon:before {
-  background: #F36440;
-  border-color: #F36440; }
+  background: #ff6a3c;
+  border-color: #ff6a3c; }
 
 .checkbox-royal input:before,
 .checkbox-royal .checkbox-icon:before {
@@ -8103,8 +8103,8 @@ input:checked + .checkbox-icon:after {
   background-color: #33cd5f; }
 
 .toggle.toggle-energized input:checked + .track {
-  border-color: #F36440;
-  background-color: #F36440; }
+  border-color: #ff6a3c;
+  background-color: #ff6a3c; }
 
 .toggle.toggle-royal input:checked + .track {
   border-color: #886aea;
@@ -8249,10 +8249,10 @@ input:checked + .checkbox-icon:after {
   background-color: #33cd5f; }
 
 .toggle-small .toggle-energized input:checked + .track {
-  background-color: rgba(243, 100, 64, 0.5); }
+  background-color: rgba(255, 106, 60, 0.5); }
 
 .toggle-small .toggle-energized input:checked + .track .handle {
-  background-color: #F36440; }
+  background-color: #ff6a3c; }
 
 .toggle-small .toggle-royal input:checked + .track {
   background-color: rgba(136, 106, 234, 0.5); }
@@ -8416,9 +8416,9 @@ input:checked + .checkbox-icon:after {
   .range.range-assertive input::-ms-fill-lower {
     background: #ef473a; }
   .range.range-energized input::-webkit-slider-thumb:before {
-    background: #F36440; }
+    background: #ff6a3c; }
   .range.range-energized input::-ms-fill-lower {
-    background: #F36440; }
+    background: #ff6a3c; }
   .range.range-royal input::-webkit-slider-thumb:before {
     background: #886aea; }
   .range.range-royal input::-ms-fill-lower {
@@ -8542,7 +8542,7 @@ input:checked + .checkbox-icon:after {
   .item-select.item-balanced:after, .item-select.item-balanced .input-label {
     color: #fff; }
   .item-select.item-energized select {
-    background: #F36440;
+    background: #ff6a3c;
     color: #fff; }
   .item-select.item-energized:after, .item-select.item-energized .input-label {
     color: #fff; }
@@ -8784,28 +8784,28 @@ progress {
         color: #fff; }
   .button.button-energized {
     border-color: transparent;
-    background-color: #F36440;
+    background-color: #ff6a3c;
     color: #fff; }
     .button.button-energized:hover {
       color: #fff;
       text-decoration: none; }
     .button.button-energized.active, .button.button-energized.activated {
       border-color: #a2a2a2;
-      background-color: #f15128; }
+      background-color: #ff5723; }
     .button.button-energized.button-clear {
       border-color: transparent;
       background: none;
       box-shadow: none;
-      color: #F36440; }
+      color: #ff6a3c; }
     .button.button-energized.button-icon {
       border-color: transparent;
       background: none; }
     .button.button-energized.button-outline {
-      border-color: #F36440;
+      border-color: #ff6a3c;
       background: transparent;
-      color: #F36440; }
+      color: #ff6a3c; }
       .button.button-energized.button-outline.active, .button.button-energized.button-outline.activated {
-        background-color: #F36440;
+        background-color: #ff6a3c;
         box-shadow: none;
         color: #fff; }
   .button.button-royal {
@@ -9011,7 +9011,7 @@ a.button {
   .button-bar.bar-balanced > .button {
     border-color: #28a54c; }
   .button-bar.bar-energized > .button {
-    border-color: #f15128; }
+    border-color: #ff5723; }
   .button-bar.bar-royal > .button {
     border-color: #6b46e5; }
   .button-bar.bar-dark > .button {
@@ -9545,13 +9545,13 @@ a.button {
   border-color: #28a54c; }
 
 .energized, a.energized {
-  color: #F36440; }
+  color: #ff6a3c; }
 
 .energized-bg {
-  background-color: #F36440; }
+  background-color: #ff6a3c; }
 
 .energized-border {
-  border-color: #f15128; }
+  border-color: #ff5723; }
 
 .royal, a.royal {
   color: #886aea; }
