--- a/www/css/style.css
+++ b/www/css/style.css
@@ -2,9 +2,6 @@
   position: absolute;
   bottom: 10px;
 }
-.login-img{
-  height: 33%;
-}
 .no-bg{
   background-image: none !important;
 }
@@ -47,6 +44,7 @@
 
 .quick-actions{
   display: table;
+  padding-bottom: 10px;
 }
 
 .quick-action-item{
