--- a/www/views/login/login.html
+++ b/www/views/login/login.html
@@ -1,6 +1,6 @@
 <ion-view view-title="登录">
   <ion-content class="stable-bg has-footer" scroll="false">
-    <img src="views/login/img/logoin_title.jpg" class="full-image image-title login-img">
+    <img src="views/login/img/logoin_title.jpg" class="full-image image-title">
     <div class="list list-inset">
       <label class="item item-input">
         <span class="input-label">账号</span>
