--- a/www/views/home/home.html
+++ b/www/views/home/home.html
@@ -1,6 +1,8 @@
 <ion-view view-title="首页">
-  <ion-content class="has-footer">
-    <img src="views/home/img/androidbanner.png" alt="" class="full-image image-title">
+  <ion-content class="has-header has-footer">
+    <div class="stable-bg">
+      <img class="full-image image-title" src="views/home/img/androidbanner.png">
+    </div>
     <div class="row stable-bg">
       <div class="col col-33">
         <h5>今日报表</h5>
@@ -59,7 +61,7 @@
       <a href="#" class="col col-border tab-item quick-action-item"></a>
     </div>
   </ion-content>
-  <div class="bar bar-footer bar-stable no-bg">
+  <div class="bar bar-footer no-bg">
     <h6 class="title">©2010-2017 生意专家</h6>
   </div>
 </ion-view>
