--- a/www/views/menu/menu.html
+++ b/www/views/menu/menu.html
@@ -1,9 +1,8 @@
 <ion-side-menus enable-menu-with-back-views="false">
   <ion-side-menu-content>
-    <ion-nav-bar class="bar-energized">
+    <ion-nav-bar class="bar-energized" align-title="center">
       <ion-nav-back-button>
       </ion-nav-back-button>
-
       <ion-nav-buttons side="left">
         <button class="button button-icon button-clear ion-navicon" menu-toggle="left">
         </button>
