--- a/www/views/category/category.html
+++ b/www/views/category/category.html
@@ -1,5 +1,10 @@
 <ion-view view-title="分类管理">
+  <ion-nav-buttons side="right">
+    <a class="button button-icon button-clear ion-ios-plus-empty" ui-sref="app.categoryAdd({id:0})">
+    </a>
+  </ion-nav-buttons>
   <ion-content class="has-header stable-bg" style="width:40%;">
+    <div class="row margin-left">大分类</div>
     <ul class="list">
       <li class="item stable-bg" style="border-right:none;" ng-repeat="item in categories" ng-class="{'item-active':item.id==activeCategory.id}"
         ng-click="selectCategory(item.id)">
@@ -7,17 +12,20 @@
       </li>
     </ul>
   </ion-content>
-  <ion-content class="has-header" style="width:60%;margin-left:40%;" scroll="false">
+  <ion-content class="has-header on-right" scroll="false">
+    <div class="row margin-left">小分类</div>
     <ul class="list">
       <li class="item item-icon-right padding-left margin-left" style="border-left:none;" ng-repeat="item in sections" ng-click="selectSection(item.id)">
         {{item.name}}
         <i class="icon ion-ios-arrow-forward" style="font-size:medium;"></i>
       </li>
     </ul>
-    <div style="position:absolute;bottom:0;left:0;right:0;padding:10px;border-top:1px solid #f8f8f8;">
+    <button class="button button-positive button-clear icon-left ion-plus-circled margin-left">新增小分类</button>
+
+  </ion-content>
+  <div class="bar bar-footer row-center on-right">
       <span ng-if="sections.length == 0">目前没有小分类</span>
       <span ng-if="sections.length != 0">共{{ sections.length-1 }}种商品分类</span>
-      <button class="button button-stable button-outline button-small" ng-click="showActionSheet()" style="float:right;"><i class="ion-android-more-horizontal"></i></button>
+      <button class="button stable-border button-icon ion-android-more-horizontal" ng-click="showActionSheet()" style="position:absolute;top:5px;right:5px;bottom:5px;"></button>
     </div>
-  </ion-content>
 </ion-view>
