--- a/www/views/home/home.html
+++ b/www/views/home/home.html
@@ -1,4 +1,8 @@
 <ion-view view-title="首页">
+  <ion-nav-buttons side="right">
+    <a class="button button-icon button-clear ion-ios-plus-empty" ui-sref="app.category">
+    </a>
+  </ion-nav-buttons>
   <ion-content class="has-header has-footer">
     <div class="stable-bg">
       <img class="full-image image-title" src="views/home/img/androidbanner.png">
