--- a/www/views/category/category-add.html
+++ b/www/views/category/category-add.html
@@ -1,20 +1,25 @@
 <ion-view view-title="{{ addCategory?'新增分类':'新增小分类' }}">
   <ion-content class="has-header stable-bg">
     <div class="padding" ng-if="!addCategory">
-      <h4>电脑{{}}</h4>
+      <h4>{{category.name}}</h4>
     </div>
     <div class="list" ng-if="addCategory">
       <label class="item item-input">
         <span class="input-label">大分类</span>
-        <input type="text" placeholder="商品大分类名称">
+        <input type="text" placeholder="商品大分类名称" ng-model="category.name">
       </label>
     </div>
     <div class="list">
-      <label class="item item-input" ng-repeat="">
+      <div class="item item-input item-button-right" ng-repeat="item in sections">
         <span class="input-label">小分类</span>
-        <input type="text" placeholder="商品小分类名称">
-      </label>
-      <button class="button button-positive button-clear icon-left ion-plus-circled margin-left">新增小分类</button>
+        <input type="text" placeholder="商品小分类名称" ng-model="item.name">
+        <button class="button button-outline button-energized ion-trash-a" ng-click="removeSection($index)" ng-show="sections.length>1">
+        </button>
+      </div>
+      <button class="button button-positive button-clear icon-left ion-plus-circled margin-left" ng-click="addSection()">新增小分类</button>
+    </div>
+    <div class="row">
+      <button class="button button-block button-full button-energized" ng-click="saveCategory()">保存</button>
     </div>
   </ion-content>
 </ion-view>
