--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -20,4 +20,5 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 $energized:#ff6a3c !default;
 // Include all of Ionic
 @import "www/lib/ionic/scss/ionic";
+@import "www/css/style.scss";
 
