--- a/www/views/menu/menu.html
+++ b/www/views/menu/menu.html
@@ -50,7 +50,7 @@
       </ul>
     </ion-content>
     <div class="bar bar-footer bar-dark">
-      <a class="button button-clear icon-left stable mtn12" menu-close>
+      <a class="button button-clear icon-left stable mtn12" menu-close ui-sref="app.setting">
         <i class="icon ion-ios-gear font-size-medium"></i>&nbsp;设置
       </a>
     </div>
