--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -9814,3 +9814,59 @@ a.button {
   opacity: 0;
   -webkit-transition-duration: 0s;
   transition-duration: 0s; }
+
+.welcome-button-group {
+  position: absolute;
+  bottom: 10px; }
+
+.no-bg {
+  background-image: none !important; }
+
+.margin-left {
+  margin-left: 10px; }
+
+.on-right {
+  margin-left: 40%;
+  width: 60%; }
+
+.menu-slide li {
+  border-left: none; }
+  .menu-slide li i {
+    font-size: medium !important; }
+
+.mtn12 {
+  margin-top: -12px; }
+
+.dark-menu .stable {
+  color: #969696 !important; }
+
+.font-size-medium:before {
+  font-size: medium !important; }
+
+.image-title {
+  height: 33%; }
+
+.col-border {
+  border: 1px solid #ececec;
+  border-right-style: none;
+  border-bottom-style: none; }
+
+.col-border:last-child {
+  border-right: 1px solid #ececec; }
+
+.row:last-child .col-border {
+  border-bottom: 1px solid #ececec; }
+
+.quick-actions {
+  display: table;
+  padding-bottom: 10px; }
+
+.quick-action-item {
+  width: 25vw;
+  height: 25vw;
+  display: table-cell;
+  vertical-align: middle; }
+
+.item-active {
+  background-color: #fff;
+  border-left: 4px #ff6a3c solid; }
