--- a/www/views/shop/shop-edit.html
+++ b/www/views/shop/shop-edit.html
@@ -2,7 +2,7 @@
   <ion-content class="stable-bg has-footer" scroll="false">
     <div class="list list-inset">
       <label class="item item-input">
-        <input type="text" placeholder="{{title}}" ng-model="inputValue">
+        <input type="text" placeholder="{{title}}" ng-model="model.inputValue">
       </label>
     </div>
     <div class="row">
