--- a/www/views/setting/setting.html
+++ b/www/views/setting/setting.html
@@ -1,6 +1,6 @@
 <ion-view view-title="店铺设置">
   <ion-nav-buttons side="left">
-    <a class="button button-icon button-clear ion-ios-arrow-back" ng-click="goBack()">
+    <a class="button button-icon button-clear ion-android-arrow-back" ng-click="goBack()">
     </a>
   </ion-nav-buttons>
   <ion-content class="stable-bg has-footer" scroll="false">
@@ -8,7 +8,7 @@
       <a ui-sref="app.shop" class="item item-icon-right">
         店铺设置<i class="icon ion-ios-arrow-forward"></i>
       </a>
-      <a ui-sref="app.home" class="item item-icon-right">
+      <a ui-sref="app.userPassword" class="item item-icon-right">
         密码<i class="icon ion-ios-arrow-forward"></i>
       </a>
     </div>
@@ -16,18 +16,18 @@
       <a ui-sref="app.about" class="item item-icon-right">
         关于我们<i class="icon ion-ios-arrow-forward"></i>
       </a>
-      <a ui-sref="app.home" class="item">
+      <a class="item">
         联系客服
         <span class="item-note positive">18305961659</span>
       </a>
-      <a ui-sref="app.home" class="item item-icon-right">
+      <a class="item item-icon-right">
         版本号：1.0.0
         <span class="item-note">检查更新</span>
         <i class="icon ion-ios-arrow-forward"></i>
       </a>
     </div>
     <div class="list list-inset">
-      <a ui-sref="app.home" class="item item-icon-right">
+      <a class="item item-icon-right">
         安全退出<i class="icon ion-ios-arrow-forward"></i>
       </a>
     </div>
