--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -9838,7 +9838,7 @@ a.button {
   margin-top: -12px; }
 
 .dark-menu .stable {
-  color: #969696 !important; }
+  color: #cacaca !important; }
 
 .font-size-medium:before {
   font-size: medium !important; }
