--- a/www/views/user/password.html
+++ b/www/views/user/password.html
@@ -1,4 +1,4 @@
-<ion-view view-title="店铺设置">
+<ion-view view-title="修改密码">
   <ion-content class="stable-bg has-header has-footer" scroll="false">
     <div class="list list-inset">
       <label class="item item-input">
