--- a/www/views/category/category.html
+++ b/www/views/category/category.html
@@ -23,7 +23,7 @@
   </ion-content>
   <ion-content class="has-header has-subheader has-footer on-right">
     <ul class="list">
-      <li class="item item-icon-right padding-left margin-left" style="border-left:none;" ng-repeat="item in sections" ng-click="selectSection(item.id)">
+      <li class="item item-icon-right padding-left margin-left" style="border-left:none;" ng-repeat="item in sections" ng-click="selectSection(item)">
         {{item.name}}
         <i class="icon ion-ios-arrow-forward" style="font-size:medium;"></i>
       </li>
