--- a/www/views/home/home.html
+++ b/www/views/home/home.html
@@ -25,7 +25,7 @@
       </div>
     </div>
     <div class="row light-bg quick-actions row-no-padding">
-      <a href="#" class="col col-border tab-item quick-action-item">
+      <a class="col col-border tab-item quick-action-item" ui-sref="app.productAdd">
         <i class="icon ion-ios-folder energized"></i>新增商品
       </a>
       <a href="#" class="col col-border tab-item quick-action-item">
