--- a/www/views/setting/setting.html
+++ b/www/views/setting/setting.html
@@ -16,7 +16,7 @@
       <a ui-sref="app.about" class="item item-icon-right">
         关于我们<i class="icon ion-ios-arrow-forward"></i>
       </a>
-      <a class="item">
+      <a class="item" href="tel:18305961659">
         联系客服
         <span class="item-note positive">18305961659</span>
       </a>
@@ -27,7 +27,7 @@
       </a>
     </div>
     <div class="list list-inset">
-      <a class="item item-icon-right">
+      <a class="item item-icon-right" ng-click="exitApp()">
         安全退出<i class="icon ion-ios-arrow-forward"></i>
       </a>
     </div>
