supplier and product add

--- a/www/views/about/about.html
+++ b/www/views/about/about.html
@@ -1,5 +1,5 @@
 <ion-view view-title="关于我们">
-  <ion-content class="stable-bg has-header has-footer" scroll="false">
+  <ion-content class="stable-bg has-header has-footer">
     <ion-slide-box does-continue="true" auto-play="true" slide-interval="3000" style="height:33%;">
       <ion-slide>
         <img class="full-image" src="views/about/img/one.jpg">
