--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -9873,3 +9873,16 @@ a.button {
 
 .no-padding {
   padding: 0 !important; }
+
+.upload-img {
+  width: 60px;
+  height: 60px;
+  margin-left: 10px; }
+  .upload-img:first-child {
+    margin-left: 0; }
+
+.footer-button .button {
+  border-radius: 0 !important; }
+
+.button.button-energized-lighten {
+  background-color: #ff7d56; }
