--- a/www/css/style.scss
+++ b/www/css/style.scss
@@ -75,3 +75,22 @@
 .no-padding {
     padding: 0!important;
 }
+
+.upload-img {
+    width: 60px;
+    height: 60px;
+    margin-left: 10px;
+    &:first-child {
+        margin-left: 0;
+    }
+}
+
+.footer-button {
+    .button {
+        border-radius: 0!important;
+    }
+}
+
+.button.button-energized-lighten {
+    background-color: lighten($energized, 5%)
+}
