--- a/www/views/home/home.html
+++ b/www/views/home/home.html
@@ -39,7 +39,7 @@
       </a>
     </div>
     <div class="row light-bg quick-actions row-no-padding">
-      <a href="#" class="col col-border tab-item quick-action-item">
+      <a class="col col-border tab-item quick-action-item" ui-sref="app.product">
         <i class="icon ion-ios-cart energized"></i>商品管理
       </a>
       <a href="#" class="col col-border tab-item quick-action-item">
