--- a/www/views/product/product-add.html
+++ b/www/views/product/product-add.html
@@ -34,7 +34,7 @@
       </label>
       <label class="item item-input">
         <span class="input-label">库存</span>
-        <input type="text" placeholder="输入商品库存" ng-model="product.store">
+        <input type="text" placeholder="输入商品库存" ng-model="product.stock">
       </label>
       <label class="item item-input">
         <span class="input-label">规格</span>
