--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -9874,6 +9874,13 @@ a.button {
 .no-padding {
   padding: 0 !important; }
 
+.no-margin-bottom {
+  margin-bottom: -1px; }
+
+.button-with-border-radius {
+  border-radius: 50%;
+  border: 1px solid #ff6a3c; }
+
 .upload-img {
   width: 60px;
   height: 60px;
