--- a/www/css/style.scss
+++ b/www/css/style.scss
@@ -76,6 +76,15 @@
     padding: 0!important;
 }
 
+.no-margin-bottom {
+    margin-bottom: -1px;
+}
+
+.button-with-border-radius {
+    border-radius: 50%;
+    border: 1px solid $energized;
+}
+
 .upload-img {
     width: 60px;
     height: 60px;
