--- a/www/views/about/about.html
+++ b/www/views/about/about.html
@@ -1,5 +1,5 @@
 <ion-view view-title="关于我们">
-  <ion-content class="stable-bg has-header has-footer">
+  <ion-content class="stable-bg has-header">
     <ion-slide-box does-continue="true" auto-play="true" slide-interval="3000" style="height:33%;">
       <ion-slide>
         <img class="full-image" src="views/about/img/one.jpg">
@@ -13,7 +13,5 @@
     </ion-slide-box>
     <p ng-include="'views/about/about.txt'"></p>
   </ion-content>
-  <div class="bar bar-footer bar-stable no-bg">
-    <h6 class="title">©2010-2017 生意专家</h6>
-  </div>
+  <company-directive></company-directive>
 </ion-view>
