--- a/www/views/home/home.html
+++ b/www/views/home/home.html
@@ -65,7 +65,5 @@
       <a href="#" class="col col-border tab-item quick-action-item"></a>
     </div>
   </ion-content>
-  <div class="bar bar-footer no-bg">
-    <h6 class="title">©2010-2017 生意专家</h6>
-  </div>
+  <company-directive></company-directive>
 </ion-view>
