--- a/www/views/shop/shop-edit.html
+++ b/www/views/shop/shop-edit.html
@@ -1,5 +1,5 @@
 <ion-view view-title="修改{{title}}">
-  <ion-content class="stable-bg has-footer" scroll="false">
+  <ion-content class="stable-bg" scroll="false">
     <div class="list list-inset">
       <label class="item item-input">
         <input type="text" placeholder="{{title}}" ng-model="model.inputValue">
@@ -9,7 +9,5 @@
       <button class="button button-block button-energized" ng-click="save()">保存</button>
     </div>
   </ion-content>
-  <div class="bar bar-footer bar-stable no-bg">
-    <h6 class="title">©2010-2017 生意专家</h6>
-  </div>
+  <company-directive></company-directive>
 </ion-view>
