--- a/www/views/shop/shop.html
+++ b/www/views/shop/shop.html
@@ -1,5 +1,5 @@
 <ion-view view-title="店铺设置">
-  <ion-content class="stable-bg has-footer" scroll="false">
+  <ion-content class="stable-bg" scroll="false">
     <div class="list list-inset">
       <a ui-sref="app.shopEdit({'title':'店铺名称','key':'title'})" class="item item-icon-right">
         店铺名称
@@ -42,7 +42,5 @@
       </a>
     </div>
   </ion-content>
-  <div class="bar bar-footer bar-stable no-bg">
-    <h6 class="title">©2010-2017 生意专家</h6>
-  </div>
+  <company-directive></company-directive>
 </ion-view>
