--- a/www/views/user/password.html
+++ b/www/views/user/password.html
@@ -1,5 +1,5 @@
 <ion-view view-title="修改密码">
-  <ion-content class="stable-bg has-header has-footer" scroll="false">
+  <ion-content class="stable-bg has-header" scroll="false">
     <div class="list list-inset">
       <label class="item item-input">
         <input type="password" placeholder="请输入旧密码" ng-model="model.op">
@@ -17,7 +17,5 @@
       <button class="button button-block button-energized" ng-click="save()">保存</button>
     </div>
   </ion-content>
-  <div class="bar bar-footer bar-stable no-bg">
-    <h6 class="title">©2010-2017 生意专家</h6>
-  </div>
+  <company-directive></company-directive>
 </ion-view>
