--- a/www/views/about/about.html
+++ b/www/views/about/about.html
@@ -2,16 +2,15 @@
   <ion-content class="stable-bg has-header">
     <ion-slide-box does-continue="true" auto-play="true" slide-interval="3000" style="height:33%;">
       <ion-slide>
-        <img class="full-image" src="views/about/img/one.jpg">
+        <img class="full-image image-title" src="views/about/img/one.jpg">
       </ion-slide>
       <ion-slide>
-        <img class="full-image" src="views/about/img/two.jpg">
+        <img class="full-image image-title" src="views/about/img/two.jpg">
       </ion-slide>
       <ion-slide>
-        <img class="full-image" src="views/about/img/three.jpg">
+        <img class="full-image image-title" src="views/about/img/three.jpg">
       </ion-slide>
     </ion-slide-box>
     <p ng-include="'views/about/about.txt'"></p>
   </ion-content>
-  <company-directive></company-directive>
 </ion-view>
