--- a/www/views/user/password.html
+++ b/www/views/user/password.html
@@ -1,20 +1,32 @@
 <ion-view view-title="修改密码">
   <ion-content class="stable-bg has-header" scroll="false">
-    <div class="list list-inset">
-      <label class="item item-input">
-        <input type="password" placeholder="请输入旧密码" ng-model="model.op">
+    <form name="myForm" novalidate ng-submit="save(myForm.$valid)">
+      <div class="list list-inset">
+        <label class="item item-input">
+        <input type="password" name="op" placeholder="请输入旧密码" ng-model="model.op" required>
       </label>
+      </div>
+      <div class="list list-inset">
+        <label class="item item-input">
+        <input type="password" name="p" placeholder="请输入新密码" ng-model="model.p" required ng-minlength="6" ng-maxlength="16">
+      </label>
+        <label class="item item-input">
+        <input type="password" name="cp" placeholder="再次输入新密码" ng-model="model.cp">
+      </label>
+      </div>
+      <div class="row">
+        <button class="button button-block button-energized" type="submit">保存</button>
+      </div>
+    </form>
+    <div class="toast-container active" ng-if="(myForm.cp.$touched || myForm.$submitted)&&(model.p!==model.cp)">
+      <div class="toast-message">新密码与确认密码不一致</div>
     </div>
-    <div class="list list-inset">
-      <label class="item item-input">
-        <input type="password" placeholder="请输入新密码" ng-model="model.p">
-      </label>
-      <label class="item item-input">
-        <input type="password" placeholder="再次输入新密码" ng-model="model.cp">
-      </label>
+    <div class="toast-container active" ng-messages="myForm.p.$error" ng-if="myForm.p.$touched || myForm.$submitted">
+      <div class="toast-message" ng-message="required">新密码不能为空</div>
+      <div class="toast-message" ng-message="minlength">新密码至少6位</div>
     </div>
-    <div class="row">
-      <button class="button button-block button-energized" ng-click="save()">保存</button>
+    <div class="toast-container active" ng-messages="myForm.op.$error" ng-if="myForm.op.$touched || myForm.$submitted">
+      <div class="toast-message" ng-message="required">旧密码不能为空</div>
     </div>
   </ion-content>
   <company-directive></company-directive>
