--- a/www/views/home/home.html
+++ b/www/views/home/home.html
@@ -65,5 +65,5 @@
       <a href="#" class="col col-border tab-item quick-action-item"></a>
     </div>
   </ion-content>
-  <company-directive></company-directive>
+  <company-directive bottom="0px"></company-directive>
 </ion-view>
