--- a/www/views/login/login.html
+++ b/www/views/login/login.html
@@ -30,5 +30,5 @@
       </div>
     </div>
   </ion-content>
-  <company-directive></company-directive>
+  <company-directive bottom="0px"></company-directive>
 </ion-view>
