--- a/www/views/setting/setting.html
+++ b/www/views/setting/setting.html
@@ -32,5 +32,5 @@
       </a>
     </div>
   </ion-content>
-  <company-directive></company-directive>
+  <company-directive bottom="44px"></company-directive>
 </ion-view>
