--- a/www/views/shop/shop-edit.html
+++ b/www/views/shop/shop-edit.html
@@ -9,5 +9,5 @@
       <button class="button button-block button-energized" ng-click="save()">保存</button>
     </div>
   </ion-content>
-  <company-directive></company-directive>
+  <company-directive bottom="44px"></company-directive>
 </ion-view>
