--- a/www/views/user/password.html
+++ b/www/views/user/password.html
@@ -29,5 +29,5 @@
       <div class="toast-message" ng-message="required">旧密码不能为空</div>
     </div>
   </ion-content>
-  <company-directive></company-directive>
+  <company-directive bottom="0px"></company-directive>
 </ion-view>
