--- a/www/views/shop/shop.html
+++ b/www/views/shop/shop.html
@@ -42,5 +42,5 @@
       </a>
     </div>
   </ion-content>
-  <company-directive></company-directive>
+  <company-directive bottom="44px"></company-directive>
 </ion-view>
